deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: flask-reverse
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: flask-reverse
    spec:
      containers:
      - name: flask-reverse
        image: localhost:5001/flask-reverse:latest
        ports:
        - containerPort: 5000
      restartPolicy: Always
metadata:
  name: flask-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      containers:
      - name: flask-api
        image: localhost:5001/flask-api:latest
        ports:
        - containerPort: 5000
      restartPolicy: Always
