service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-reverse
  labels:
    service: flask-reverse
spec:
  selector:
    app: flask-reverse
  ports:
  - port: 5000
    targetPort: 5000
metadata:
  name: flask-api
  labels:
    service: flask-api
spec:
  selector:
    app: flask-api
  ports:
  - port: 5000
    targetPort: 5000
