ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minikube-ingress
  annotations:
spec:
  rules:
  - host: one.kube.neem.dcsc.accenture.com
    http:
      paths:
      - path: /reverse
        backend:
          serviceName: flask-reverse
          servicePort: 5000
      - path: /api
        backend:
          serviceName: flask-api
          servicePort: 5000
      - path: /random
        backend:
          serviceName: flask-api
          servicePort: 5000
